# nmdc-runtime

./: .dockerignore  .env.dev  .env.example  .env.test  .gitignore  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  404.html  AGENTS.md  LICENSE  MULTIVALUED_WAS_INFORMED_BY.md  Makefile  README.md  RELEASES.md  docker-build.sh  docker-compose-dev.yml  docker-compose.base.yml  docker-compose.test.gha.yml  docker-compose.test.yml  docker-compose.yml  fair_test_test.py  flake.nix  github_secrets_to_dotenv.sh  guix-manifest.scm  index.html  mkdocs.yml  neon_cache.sqlite  nmdc-wfe.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tasks.py  terminus_init_docker.sh  terminusdb  tmp.json  uvicorn-log-config.yaml  workflows.yaml  workspace.toml
.claude/skills/: ncbi-to-nmdc.md
.docker/: entrypoint.sh
.docker/mongo/: check_health.sh  ensure_replica_set_is_initialized.sh
.docker/mongo_init/: 01-init.js  initialize_replica_set.sh
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-push-docker-images.yml  build-and-release-to-spin-berkeley.yml  build-and-release-to-spin.yml  deploy-redirects.yml  fair-test.yml  lint.yml  mkdocs.yml  nmdc-migration-cli-container-image.yml  pytest.yml  python-app.yml  release-to-pypi.yml  release-to-spin.yml  release.yml
admin/: index.html
components/job/: requirements.txt
components/workflow/: pyproject.toml
components/workflow/workflow/: core.py  spec.py  store.py
contributing-docs/: index.html
db/: README.md
db/migrations/: README.md
db/migrations/cli/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  roles.py
db/migrations/cli/lib/: bookkeeper.py  config.py  display.py  roles.py  schema.py  system.py
db/migrations/cli/src/: main.py
db/migrations/cli/src/lib/: config.py  display.py  dumps.py  system.py
db/migrations/cli/src/nmdc_migration_cli/: main.py
db/migrations/cli/src/nmdc_migration_cli/lib/: config.py  display.py  dumps.py  schema.py  system.py
demo/metadata_discovery/: .env.example  GOLDs5levelEcosystemClassificationPaths.xlsx  biosamples.json  console_queries.dev  indexing.ipynb
demo/metadata_migration/: main.ipynb
docs/: admin.md  contributing-docs.md  contributing.md  draft.md  guide-claim-and-run-jobs.md  guide-create-triggers.md  guide-update-sensors-ops.md  index.html  index.md  mkdocs.yml  release-process.md  tutorial-auth.md  tutorial-create-user.md  tutorial-json.md  tutorial-metadata-in.md
docs/content/: admin.md  contributing-docs.md  index.md
docs/design/: api-resource-layout.md  redoc-static.html  spec.md  workflow-automation.md
docs/explanation/: identifiers.md  journeys.md
docs/howto-guides/: author-changesheets.md  claim-and-run-jobs.md  create-triggers.md  improving-search-api.md  minting-ids.md  release-process.md  update-sensors-ops.md
docs/jobs/: emsl-translation-etl.md  gold-translation-etl.md  jgi-translation-etl.md
docs/nb/: api_access_via_python.ipynb  bulk_validation_referential_integrity_check.ipynb  general_usage.ipynb  get_data.ipynb  ontology_loader.ipynb  queue_and_trigger_data_jobs.ipynb  wf_automation.ipynb
docs/tutorials/: auth.md  create-user.md  exporters.md  json.md  metadata-in.md
docs_prev/design/: api-resource-diagram.md  api-resource-layout.md  nmdc-wfe.ttl  redoc-static.html  workflow-automation.md
draft/: index.html
explanation/domain-vision-statement/: index.html
explanation/identifiers/: index.html
explanation/journeys/: index.html
howto-guides/author-changesheets/: index.html
howto-guides/claim-and-run-jobs/: index.html
howto-guides/create-triggers/: index.html
howto-guides/improving-search-api/: index.html
howto-guides/release-process/: index.html
howto-guides/update-sensors-ops/: index.html
metadata-translation/: Makefile  README.md  etl.Makefile
metadata-translation/examples/: Froze_Core_2015_S2_0_10_7_Metab.json  biosample_test.json  changesheet-ex-01.csv  emsl_data_object_test.json  emsl_project_test.json  ftms_nom_data_products.json  functional-annotation.json  gcms_metabolomics_data_products.json  gold_project_test.json  img_mg_annotation_data_objects.json  metagenome_annotation_activity.json  migs-template-cedar.schema.json  nmdc_example_database.json  nom_analysis_activity.json  readQC_activities_test.json  readQC_data_objects_test.json  read_based_analysis_activity.json
metadata-translation/images/: nmdc-etl-workflow.drawio
metadata-translation/mapping-files/: Description_MIxS_Packages_v5.docx  GOLD-Paths-to-MIxS-ENVO-triad-mapping.xlsx  MIxSair_20180621_GOLD_Mapping_04132020.xlsx  MIxSbuiltenv_20180621_GOLD_Mapping_04172020.xlsx  MIxShostassoc_20180621_GOLD_Mapping.xlsx  MIxShumanassoc_20180621_GOLD_Mapping_04142020.xlsx  MIxShumangut_20180621_GOLD_Mapping_04152020.xlsx  MIxShumanoral_20180621_GOLD_Mapping_04152020.xlsx  MIxShumanskin_20180621_GOLD_Mapping_04162020.xlsx  MIxShydrocarbCores_20180621_Mapping_GOLD.xlsx  MIxShydrocarbfs_20180621_v5_GOLD_Mapping.xlsx  MIxSmatbiofilm_20180621_v5_GOLD_Mapping.xlsx  Makefile  (+4 more)
nmdc_runtime/: Dockerfile  __init__.py  celery.Dockerfile  config.py  containers.py  dagster.Dockerfile  dagster.yaml  dagster_repository.py  dagster_workspace.yaml  docker-compose.yml  entrypoint-dagit.sh  entrypoint-dagster-daemon.sh  fastapi.Dockerfile  fuseki.Dockerfile  logger.py  mongo_util.py  pipelines.Dockerfile  terminus.Dockerfile  terminusdbgen.py  test.Dockerfile  util.py
nmdc_runtime_client/: setup.py  tasks.py
requirements/: dev.in  dev.txt  main.in  main.txt
search/: search_index.json
skills-scripts/: ncbi_bioproject_to_nmdc.py
stylesheets/: extra.css
test_data/: 1781_100325_feature.json  1781_100325_func.json  simple_example.gff  simple_example.gff.md5  simple_feature.json  simple_func.json
tests/: __init__.py  conftest.py  mongodump-nmdc-testdb.sh  mongorestore-nmdc-testdb.sh  test_config.py  test_multivalued_was_informed_by.py  test_util.py
util/: get_latest_nmdc_prod_dump_dir.sh  mongodump-nmdc.sh  mongorestore-nmdc.sh
(+598 files in other folders)
