[build-system]
requires = ["hatchling>=1.9.0"]
build-backend = "hatchling.build"

[project]
name = "workflow_nmdc_runtime"
version = "0.0.1"
authors = [
  { name="Elais Player", email="elais@fastmail.com"}
]
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beanie>=1.11.6",
    "pydantic>=1.9.1",
    "semver>=3.0.0.dev3"
]

[project.urls]
Homepage = "https://github.com/microbiomedata/nmdc-runtime"
Tracker = "https://github.com/microbiomedata/nmdc-runtime/issues"
Source = "https://github.com/pypa/hatch"

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true
