[project]
name = "nmdc-mongo-migration-cli"
version = "0.1.0"
description = "CLI app for migrating the NMDC database between two versions of the NMDC schema"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.3",
]

[project.scripts]
nmdc-mongo-migration = "main:run"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
