[project]
name = "nmdc-mongo-migration-cli"
version = "0.1.0"
description = "CLI app for migrating the NMDC database between two versions of the NMDC schema"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "linkml>=1.10.0",
    "linkml-runtime>=1.10.0",
    "pymongo>=4.12.1",
    "refscan>=0.4.4",
    "rich>=13.9.4",
    "typer>=0.15.3",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[project.scripts]
nmdc-mongo-migration = "src.main:run"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Specify which linting rules will be used when someone runs `$ uv run ruff check`.
# Note: The default rules are `["E4", "E7", "E9", "F"]`.
# References:
# - https://docs.astral.sh/ruff/rules/ (the list of rules)
# - https://docs.astral.sh/ruff/settings/#lint_select (the `select` setting)
select = ["E4", "E7", "E9", "F", "D101", "D102", "D103"]
